1276/dev.techgarden.gg/coffee/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: coffee-dev-techgarden-gg
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/hostname: coffee.dev.techgarden.gg
spec:
  selector:
    app: coffee-dev-techgarden-gg
  ports:
  - name: http
    targetPort: 80
    port: 80
